[gd_scene load_steps=2 format=2]

[ext_resource path="res://Spawn_range.gd" type="Script" id=1]

[node name="Spawn_range" type="Node2D"]
script = ExtResource( 1 )

[node name="pos1" type="Position2D" parent="."]
position = Vector2( -646.538, 0 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( 2774.73, 0 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
